--- a/html/create_user.html
+++ b/html/create_user.html
@@ -5,24 +5,24 @@
     <title>Create New User</title>
     <style>
         body {
-            background-color: #E8F5E9;
+            background-color: #CFC3BD;
             font-family: Arial, sans-serif;
             font-size: 16px;
-            color: #2b2b2b;
+            color: #2C2C2C;
             margin: 0;
         }
         .container {
             max-width: 800px;
             margin: 50px auto;
             padding: 20px;
-            background-color: #fff;
-            border: 1px solid #4CAF50;
+            background-color: #B3A09A;
+            border: 1px solid #722F37;
             border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 12px rgba(114, 47, 55, 0.25);
         }
         h2 {
             text-align: center;
-            color: #4CAF50;
+            color: #722F37;
         }
         form {
             display: flex;
@@ -31,25 +31,87 @@
         label {
             margin: 15px 0 5px;
             font-size: 18px;
+            color: #2C2C2C;
         }
         input, select {
             padding: 12px;
-            border: 1px solid #4CAF50;
+            border: 1px solid #722F37;
             border-radius: 5px;
             font-size: 16px;
+            background-color: #D0C8C0;
+            color: #2C2C2C;
+        }
+        input::placeholder {
+            color: #444;
+        }
+        select option {
+            background-color: #D0C8C0;
+            color: #2C2C2C;
         }
         button {
             margin-top: 20px;
             padding: 12px;
             border: none;
-            background-color: #4CAF50;
-            color: #fff;
+            background-color: #5E1F28;
+            color: #F0EDEA;
             border-radius: 5px;
             font-size: 18px;
             cursor: pointer;
+            font-weight: bold;
         }
         button:hover {
-            background-color: #7ed17b;
+            background-color: #4A1F24;
+            color: #F0EDEA;
+        }
+        header {
+            background-color: #5E1F28;
+            color: #F0EDEA;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        footer {
+            background-color: #5E1F28;
+            color: #F0EDEA;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+        .modal-content {
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            text-align: center;
+            max-width: 400px;
+            border-top: 4px solid #5E1F28;
+            padding: 30px 40px;
+        }
+        .modal-content h3 {
+            color: #5E1F28;
+            margin-top: 0;
+        }
+        .modal-btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            background: #5E1F28;
+            color: #F0EDEA;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background 0.2s;
+        }
+        .modal-btn:hover {
+            background: #4A1F24;
         }
     </style>
 </head>
@@ -88,9 +150,9 @@
 </div>
 
 <div id="successModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); z-index:1000; justify-content:center; align-items:center;">
-  <div style="background:#fff; padding:30px 40px; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.2); text-align:center;">
-    <p id="modalMessage" style="font-size:18px; color:#333;"></p>
-    <button onclick="closeModal()" style="margin-top:20px; padding:10px 20px; font-size:16px; border:none; background:#4CAF50; color:#fff; border-radius:5px; cursor:pointer;">OK</button>
+  <div class="modal-content">
+    <h3 id="modalMessage" style="font-size:18px; color:#5E1F28;"></h3>
+    <button onclick="closeModal()" class="modal-btn">OK</button>
   </div>
 </div>
 
