--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@
             border-radius: 10px;
             scroll-behavior: smooth;
             background-color: #CFC3BD;
+            font-size: 20px;
         }
 
         .input-box {
@@ -71,6 +72,7 @@
 
         .chat-message {
             margin-bottom: 15px;
+            font-size: 20px;
         }
 
         .bot {
