Add back to home pages

--- a/html/login.html
+++ b/html/login.html
@@ -121,10 +121,24 @@
         .modal-btn:hover {
             background: #4A1F24;
         }
+        .back-home-link {
+            display: inline-block;
+            margin-bottom: 12px;
+            color: #5E1F28;
+            text-decoration: none;
+            font-size: 15px;
+            font-weight: bold;
+            transition: color 0.2s;
+        }
+        .back-home-link:hover {
+            color: #722F37;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
 <div class="container">
+    <a href="home_page.html" class="back-home-link">&#8592; Back to Home</a>
     <h2>Login</h2>
     <form id="loginForm">
         <label for="email">Email</label>
