Fix references to index page

--- a/html/home_page.html
+++ b/html/home_page.html
@@ -155,7 +155,7 @@
 <header>
     <h1 class="title">Medical Assistant</h1>
     <div class="button-container">
-        <a href="index.html" class="button button-chat" id="chatNowBtn">Chat Now!</a>
+        <a href="chat_page.html" class="button button-chat" id="chatNowBtn">Chat Now!</a>
         <span id="userNameDisplay" class="button button-login" style="display:none; cursor:pointer;"></span>
         <a href="login.html" class="button button-login" id="loginBtn">Login</a>
         <a href="create_user.html" class="button button-create" id="createAccountBtn">Create Account</a>
