--- a/html/login.html
+++ b/html/login.html
@@ -12,48 +12,57 @@
             margin: 0;
         }
         .container {
-            max-width: 400px;
-            margin: 100px auto;
-            padding: 20px;
+            max-width: 500px;
+            margin: 80px auto;
+            padding: 40px;
             background-color: #B3A09A;
             border: 1px solid #722F37;
-            border-radius: 10px;
+            border-radius: 12px;
             box-shadow: 0 4px 12px rgba(114, 47, 55, 0.25);
         }
         h2 {
             text-align: center;
             color: #722F37;
+            font-size: 28px;
+            margin-bottom: 30px;
         }
         form {
             display: flex;
             flex-direction: column;
         }
         label {
-            margin: 15px 0 5px;
+            margin: 15px 0 8px;
             font-size: 18px;
             color: #2C2C2C;
+            font-weight: bold;
         }
         input {
-            padding: 12px;
-            border: 1px solid #722F37;
-            border-radius: 5px;
+            padding: 15px;
+            border: 2px solid #722F37;
+            border-radius: 8px;
             font-size: 16px;
             background-color: #D0C8C0;
             color: #2C2C2C;
+            transition: border-color 0.2s;
+        }
+        input:focus {
+            outline: none;
+            border-color: #5E1F28;
         }
         input::placeholder {
-            color: #444;
+            color: #666;
         }
         button {
-            margin-top: 20px;
-            padding: 12px;
+            margin-top: 25px;
+            padding: 15px;
             border: none;
             background-color: #5E1F28;
             color: #F0EDEA;
-            border-radius: 5px;
+            border-radius: 8px;
             font-size: 18px;
             cursor: pointer;
             font-weight: bold;
+            transition: background 0.2s;
         }
         button:hover {
             background-color: #4A1F24;
@@ -61,15 +70,22 @@
         }
         .links {
             text-align: center;
-            margin-top: 20px;
+            margin-top: 25px;
         }
         .links a {
-            color: #722F37;
+            color: #5E1F28;
             text-decoration: none;
+            font-size: 16px;
+            font-weight: bold;
+            padding: 10px 15px;
+            border-radius: 8px;
+            transition: background 0.2s, color 0.2s;
+            display: inline-block;
         }
         .links a:hover {
-            color: #4A1F24;
-            text-decoration: underline;
+            background-color: #5E1F28;
+            color: #F0EDEA;
+            text-decoration: none;
         }
         header {
             background-color: #5E1F28;
@@ -94,9 +110,9 @@
             right: 0;
         }
         .modal-content {
-            background: #fff;
+            background: #B3A09A;
             border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 12px rgba(114, 47, 55, 0.25);
             text-align: center;
             max-width: 400px;
             border-top: 4px solid #5E1F28;
@@ -123,16 +139,19 @@
         }
         .back-home-link {
             display: inline-block;
-            margin-bottom: 12px;
+            margin-bottom: 20px;
             color: #5E1F28;
             text-decoration: none;
-            font-size: 15px;
+            font-size: 18px;
             font-weight: bold;
-            transition: color 0.2s;
+            padding: 8px 12px;
+            border-radius: 8px;
+            transition: background 0.2s, color 0.2s;
         }
         .back-home-link:hover {
-            color: #722F37;
-            text-decoration: underline;
+            background-color: #5E1F28;
+            color: #F0EDEA;
+            text-decoration: none;
         }
     </style>
 </head>
