Several UI adjustments

--- a/html/chat_page.html
+++ b/html/chat_page.html
@@ -128,11 +128,19 @@
         .header {
             background-color: #5E1F28;
             color: #F0EDEA;
-            padding: 10px 20px;
+            padding: 15px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             margin-bottom: 20px;
+        }
+        .header h2 {
+            margin: 0;
+            font-size: 28px;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
 
         .back-button {
