--- a/html/home_page.html
+++ b/html/home_page.html
@@ -133,8 +133,24 @@
             background-color: #CFC3BD;
         }
 
-        main h2, main h3 {
-            color: #722F37;
+        main h2 {
+            color: #5E1F28;
+            font-size: 36px;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+            border-bottom: 3px solid #5E1F28;
+            padding-bottom: 15px;
+            margin-bottom: 30px;
+        }
+        main h3 {
+            color: #5E1F28;
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 30px;
+            margin-bottom: 15px;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
         }
 
         main p {
