--- a/html/login.html
+++ b/html/login.html
@@ -22,9 +22,15 @@
         }
         h2 {
             text-align: center;
-            color: #722F37;
-            font-size: 28px;
+            color: #5E1F28;
+            font-size: 36px;
             margin-bottom: 30px;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+            border-bottom: 3px solid #5E1F28;
+            padding-bottom: 15px;
         }
         form {
             display: flex;
