--- a/html/user.html
+++ b/html/user.html
@@ -94,8 +94,14 @@
             position: relative;
         }
         h2 {
+            text-align: center;
             color: #5E1F28;
+            font-size: 28px;
             margin-top: 0;
+            margin-bottom: 20px;
+            font-weight: bold;
+            border-bottom: 3px solid #5E1F28;
+            padding-bottom: 15px;
         }
         .profile-section {
             border-bottom: 1px solid #B3A09A;
@@ -127,9 +133,10 @@
             margin-bottom: 32px;
         }
         .section-title {
-            font-size: 20px;
+            font-size: 22px;
             color: #5E1F28;
-            margin-bottom: 10px;
+            margin-bottom: 12px;
+            font-weight: bold;
         }
         .record-list, .appointment-list {
             list-style: none;
@@ -225,20 +232,19 @@
             text-decoration: none;
         }
         .button-delete {
-            background-color: #5E1F28;
-            color: #F0EDEA;
+            background: #B3A09A;
+            color: #5E1F28;
             border: 2px solid #5E1F28;
             padding: 10px 20px;
             border-radius: 8px;
             cursor: pointer;
             font-weight: bold;
             font-size: 16px;
-            transition: background 0.2s, color 0.2s, border 0.2s;
+            transition: background 0.2s, color 0.2s;
         }
         .button-delete:hover {
-            background-color: #4A1F24;
+            background: #4A1F24;
             color: #F0EDEA;
-            border-color: #4A1F24;
         }
         #deleteModal .modal-content, #successModal .modal-content, #deleteAppointmentModal .modal-content {
             background: #B3A09A;
@@ -662,11 +668,10 @@ function showEmptyState() {
     list.innerHTML = `
         <li class="empty-msg">
             <div style="text-align: center; padding: 20px;">
-                <div style="font-size: 48px; margin-bottom: 10px;">📅</div>
-                <div style="font-size: 18px; margin-bottom: 10px;">No appointments found</div>
+                <div style="font-size: 48px; margin-bottom: 10px; color: #5E1F28;">📋</div>
+                <div style="font-size: 18px; margin-bottom: 10px;">No appointments scheduled</div>
                 <div style="font-size: 14px; color: #666; margin-bottom: 15px;">
-                    Book your first appointment through our chat assistant!
-                    <br><small>Current user ID: ${userObj.id}</small>
+                    Book an appointment through our chat assistant!
                 </div>
                 <button onclick="manageAppointments()" class="button button-chat" style="padding: 10px 20px;">
                     💬 Start Booking
